(EN) Fix image ref

--- a/en/modules/ROOT/pages/why-decidim.adoc
+++ b/en/modules/ROOT/pages/why-decidim.adoc
@@ -52,8 +52,7 @@ Resuming, in the political plane, the last decades have witnessed the tension be
 
 *Decidim in context.* As we have shown, democracies in the network society face the double challenge of the crisis of representative democracy and the rise of platform capitalism. The first phenomenon is tied to neoliberalism (and its periodic crises) as well as to the emergence of progressive and reactionary networked politics. The second phenomenon underlies new social conditions as well as those very forms of networked politics, while it is opposed by commons-oriented forms of production. The following image can help to understand the role of Decidim in this context.
 
-image:{imagesdir}/decidim-in-context.svg[image,width=602,height=441]
-
-_Decidim model for a democratic society._
+.Decidim model for a democratic society.
+image::decidim-in-context.svg[image,width=602,height=441]
 
 Under platform capitalism, corporations extract social data in huge quantities and turn it into wealth and power over people and institutions (this is what, in the image below, we label “algorithmic governance”), challenging democracy as we know it. New forms of distributed platform capitalism (airbnb, uber, deliveroo, etc.) herald forms of capilar exploitation of social wealth. However, non-corporate, collaborative forms of digital production exist, and they make possible to find alternatives. Decidim is one such alternative. It is conceived as a commons’ digital infrastructure for participatory democracy that is publicly supported and democratically designed, using itself for such purpose. The value of Decidim stands out in a context in which democratic collective intelligence faces the challenge of corporate artificial intelligence and datacracy, where the democratic impulse of networked social movements, from alter-globalization to 15M, faces reactions by market, State and right wing forces, and where public and commons’ institutions require democratic innovative infrastructures to overtake market-driven innovation in solving the complex social challenges of our times. Whereas a dominant trend pushes the governing of infrastructures and services to the top-right of the picture, towards increasing privatization and centralization in the hands of big corporations, the socio-technical potential exists to shift this trend towards the bottom-left corner: towards decentralized and public-common’s ecosystems of services, infrastructures and goods. Decidim contributes to this transition by boosting democratic participation into the governing of public bodies, social organization, the cooperative economy as well as the joint circulation among the three. So far, public emphasis has been put into regulating consumer markets, corporate governance and economy as a means to slow down privatizing trends and its negative consequences; meanwhile, corporate interests keep exerting their lobbying influence into the public and state institutions. Instead, Decidim contributes to the strengthening of innovative forms of commons-oriented economy and participatory democracy. The next section deals with “how” this strengthening operates, explaining how Decidim explores the potential of participation at various scales.
