blank spaces added to avoid include problems

--- a/en/modules/ROOT/pages/what-is-decidim.adoc
+++ b/en/modules/ROOT/pages/what-is-decidim.adoc
@@ -31,12 +31,13 @@ include::{partialsdir}/README.adoc[tag=metadata]
 
 *The political, the technical and the technopolitical*. As we have repeatedly stressed, Decidim is more than a technological platform. It has required to assemble a variety of codes, realities and dimensions that go beyond programming code. We define it as a “technopolitical project” where legal, political, institutional, practical, social, educational, communicative, economic and epistemic codes merge together. Ultimately, Decidim is in itself a sort of crossroad of the various dimensions of networked democracy and society, a detailed practical map of their complexities and conflicts. We distinguish three general planes or dimensions of the project: the _political_ (focused on the democratic model that Decidim promotes and its impact on public policies and organizations), the _technopolitical_ (focused on how the platform is designed, the mechanisms it embodies, and the way in which it is itself democratically designed), and the _technical_ (focused on the conditions of production, operation and success of the project: the digital factory, collaborative mechanisms, licenses, etc.). The political plane is best illustrated by the use of Decidim in a city or organization, the type of democratic processes and decisions that are made through it. In other words, it covers what kind of politics can be done using Decidim: what kind of governance, conflict and power relationships can be channelled through it, thus, the kind of democracy it is capable to produce. Its model instance is decidim.barcelona, what happens within, how it alters the political space of the city. The second plane, the technopolitical, includes matters concerning the digital architectural design of Decidim: its interfaces, features, design principles, data policies, user experience, etc. It is a primarily a reflexive space of how technologies structure political processes. It is embodied in the Metadecidim platform and the community that surrounds it. Finally, the technical plane encompasses issues concerning primarily the programming and legal codes (information and legal infrastructures), but is also includes issues of education and knowledge (epistemic infrastructures), spatial and working organization. All three dimensions are part of the project.
 
+.Systematization footnote:[We have chosen Barcelona here as a scale of reference, but it could be the EU, or any other political territory or democratic organization. The term “scale” does not refer here to territorial extension, but to the number of agents and organizational complexity: the political involves more complexity, more agents, more conflict, more diversity and width of decision to be made, the technopolitical is a smaller community scale, the technical is a laboratory or factory that covers a subset of this community.] of various aspects of the Decidim project in the political, technopolitical and technical planes with the city of Barcelona as a reference.
 [cols=",,,,",options="header",]
-|========================================================================
-|*Plane * |*Relation* |*Platform* |*Mode* |*Scale*
+|===
+|Plane |Relation |Platform |Mode |Scale
 |Political |Superstructure |decidim.barcelona |Co-decision |City
 |Technopolitical |Structure |Metadecidim |Co-design |Community
 |Technical |Infrastructure |github.com/decidim |Co-production |Laboratory
-|========================================================================
+|===
 
-__Table 1: Systematization__footnote:[We have chosen Barcelona here as a scale of reference, but it could be the EU, or any other political territory or democratic organization. The term “scale” does not refer here to territorial extension, but to the number of agents and organizational complexity: the political involves more complexity, more agents, more conflict, more diversity and width of decision to be made, the technopolitical is a smaller community scale, the technical is a laboratory or factory that covers a subset of this community.] _of various aspects of the Decidim project in the political, technopolitical and technical planes with the city of Barcelona as a reference_.
+
