--- a/en/modules/ROOT/pages/decidim-a-brief-overview.adoc
+++ b/en/modules/ROOT/pages/decidim-a-brief-overview.adoc
@@ -17,5 +17,9 @@ include::{partialsdir}/README.adoc[tag=metadata]
 
 *How to read this white paper and make it yours*. Readers might be interested on different dimensions of the project and we encourage you to find the chapter or section that best matches your interests. The introduction however is worth reading for any of you. We start with a brief explanation of what is Decidim, a definition of the project, how the platform works, the social contract that binds the project together, a description of the community and ecosystem behind it, the model of democracy that it embodies and the three dimensions of the project: the political, the technopolitical and the technical. We next move into the context in which Decidim has been developed to explain why we thought it was necessary to initiate or join this project, why it is relevant today both in the context of a crisis of democracy as we knew it and the context of an increasing control of social digital infraestructures by a few corporations. The rest of the paper is structured along the three planes or dimensions of the project: the political plane explains the model of democracy that Decidim embodies and makes possible, contrasting it with different limitations and models of contemporary democracy (representative democracy and party politics, technocracy and neoliberal models of governance, etc.) highlighting how Decidim makes possible to strengthen new and old forms of participatory democracy, collective intelligence and multitudinous political identities in public institutions and social organizations alike. The technopolitical planefootnote:[In short, by technopolitics we mean the intersection and hybridization of technology and politics. This is a conception of politics that focuses on the technical articulation of power, its structure and exercise, highlighting and intervening on devices, interfaces, codes, protocols, networks and methods in contrast with conceptions of politics that focuses on ideas, discourses, symbols and reasons. It is a conception of technology that focuses on its political dimensions, its mutability and its construction, highlighting and intervening in the power relationships, ideologies and logics in contrasts to views that understand it as value neutral and objective matters.] explains how this is made possible through the platform, its design principles, best configuration practices and the technological articulation of the project’s internal politics through the platform: the Metadecidim community. Finally, we extend into the details of the technical articulation of the project: how the software is produced, its architectural details, organizing protocols, legal licenses, collaborative practices, training programs, etc.
 
+// Include the subsections
+
 include::what-is-decidim.adoc[leveloffset=+1]
+
 include::why-decidim.adoc[leveloffset=+1]
+
