cleans file names

--- a/en/modules/ROOT/pages/single-page.adoc
+++ b/en/modules/ROOT/pages/single-page.adoc
@@ -41,4 +41,4 @@ include::{partialsdir}/CONTRIBUTING.adoc[tag=contents]
 // (3/3) ADD BELOW THE LIST OF REGULAR CHAPTERS OR SECTIONS. IMPORTANT: PUT A
 // BLANK LINE BETWEEN INCLUDES.
 
-include::introduction.adoc[]
+include::decidim-a-brief-overview.adoc[]
