update of instances stats

--- a/en/modules/ROOT/pages/what-is-decidim.adoc
+++ b/en/modules/ROOT/pages/what-is-decidim.adoc
@@ -11,7 +11,7 @@ endif::[]
 include::{partialsdir}/README.adoc[tag=metadata]
 
 .Video: https://youtu.be/zhMMW0TENNA[Decidim: Free Open-Source participatory democracy for cities and organizations].
-video::zhMMW0TENNA[youtube, width=720, height=390]
+video::f6JMgJAQ2tc[youtube, width=720, height=390]
 
 *Intro*. Decidim [http://decidim.org[http://decidim.org]], from the Catalan "let's decide" or “we decide”, is a digital infrastructure for participatory democracy, a digital platform, built entirely and collaboratively as https://en.wikipedia.org/wiki/Free_software[free software]. More specifically, Decidim is a web environment (a _framework_) produced in _Ruby on Rails_ (a programming language) that allows anybody to create and configure a website platform to be used in the form of a political network for democratic participation. The platform allows any organization (local city council, association, university, NGO, neighbourhood or cooperative) to create mass processes for strategic planning, participatory budgeting, public consultation, collaborative design for regulations, urban spaces and election processes, etc. It also makes possible to connect traditional in-person democratic meetings (assemblies, council meetings, etc.) with the digital world: sending meeting invites, managing registrations, facilitating the publication of minutes, etc. In addition, Decidim enables the structuring of government bodies or assemblies (councils, boards, working groups), the convening of consultations, referendums or channelling citizen or member initiatives to trigger different decision-making processes. Yet, the Decidim project is much more than that.
 
@@ -21,7 +21,7 @@ video::zhMMW0TENNA[youtube, width=720, height=390]
 
 *The social contract*: All members and partners of the Decidim project must endorse and follow a “https://decidim.org/contract[social contract]” that defines a set of guiding principles. The social contract can be summarized as follows: 1. _Free software and open content_: Decidim will always remain free and open to collaboration, without legal or technical obstacles for the use, copy and modification. To ensure this we use a set of licenses: https://www.gnu.org/licenses/agpl-3.0.html[Affero GPLv3] for the code, https://creativecommons.org/licenses/by-sa/4.0/[CreativeCommons By-SA] for the content (text, images, design, etc.) and https://opendatacommons.org/licenses/odbl/1-0/[Open Access Database License] for data. This means that Decidim will always remain auditable, collaborable, transparent, appropriable and trustworthy, all of which is fundamental for a democratic infrastructure. 2. _Transparency, traceability and integrity_: the content of participation will always remain transparent, traceable and integral. This means that all the content must be accessible and downloadable, it should always be known what happens with each proposal, its origin, where it was incorporated or why it was rejected, and the content needs to be displayed without been manipulated, any modification (if required) must be registered and be accessible and auditable. 3. _Equal opportunities, democratic quality and inclusiveness_: the platform must guarantee the democratic quality, the non-discrimination and equal opportunities for each participant and proposals, including objective indicators. The platform must comply with accessibility standards, its use must favour the integration of online and offline participation and organizations must deploy the means for mediation and training of participants. 4. _Privacy with verification_: participants must retain privacy of their personal data combined with verification. Personal data should never be displayed, nor sold or transferred to third parties while, at the same time, the unicity and democratic rights of participants must be preserved (meaning there cannot be two verified users corresponding to the same individual with democratic rights and all participants with such rights must be verifiable). 5. _Democratic commitment, responsibility and collaboration_: institutions using Decidim must commit to respond on time, be accountable for decisions taken through the platform, and to openly collaborate on its improvement.
 
-*Instances*. The best known and intensively used instance of Decidim, as a digital platform for participatory democracy, is https://decidim.barcelona[www.decidim.barcelona], with (as of March the 1st) more than 28,000 registered participants, 1,288,999 page views, 290,520 visitors, 19 participatory processes, 821 public meetings channelled through the platform and 12,173 proposals, out of which over 8,923 have already become public policies grouped into 5,339 results whose implementation level can be monitored by citizens. The instance that actively explores more functionalities is Metadecidim.org, the community portal that designs and supports the project. There is also a demo site with the latest version available for exploration and a training instance open to anybody to learn how to configure, administrate and use the platform. There are currently more than 20 instances of Decidim for organizations of different sorts ranging from municipalities such as https://osallistu.hel.fi/[Helsinki] or https://erabaki.pamplona.es/[Pamplona], to regional governments like the https://participa.castillalamancha.es/[Junta de Castilla la Mancha] or the https://participa.gencat.cat/[Generalitat de Catalunya], national governments like the https://monopinion.belgium.be[Belgium Federal State], NGO networks such as https://assembly.fundaction.eu[Fundaction] or https://participa.quorumglobal.org/[QuorumGlobal], cooperatives like https://participa.somenergia.coop/[Som Energia], or the https://participons.debatpublic.fr/[National Commission for Public Debate] (_Commission Nationale du Débat Public_) in France. We have an https://decidim-monitor.herokuapp.com[online monitoring tool] that captures the relevant public data of known Decidim instances around the world..
+*Instances*. The best known and intensively used instance of Decidim, as a digital platform for participatory democracy, is https://decidim.barcelona[www.decidim.barcelona], with (as of December 2018) more than 30,000 registered participants, more than 1.5 million page views, over 300,000 visitors, 35 participatory processes, 1,141 public meetings channelled through the platform and 13,297 proposals, out of which over 9,196 have already become public policies grouped into 5,485 results whose implementation level can be monitored by citizens. The instance that actively explores more functionalities is http://meta.decidim.org[meta.decidim.org], the community portal that designs and supports the project. There is also a demo site with the latest version available for exploration and a training instance open to anybody to learn how to configure, administrate and use the platform. There are currently more than 70 instances of Decidim for organizations of different sorts ranging from municipalities such as https://osallistu.hel.fi/[Helsinki] or https://erabaki.pamplona.es/[Pamplona], to regional governments like the https://participa.castillalamancha.es/[Junta de Castilla la Mancha] or the https://participa.gencat.cat/[Generalitat de Catalunya], national governments like the https://monopinion.belgium.be[Belgium Federal State], NGO networks such as https://assembly.fundaction.eu[Fundaction] or https://participa.quorumglobal.org/[QuorumGlobal], cooperatives like https://participa.somenergia.coop/[Som Energia], or the https://participons.debatpublic.fr/[National Commission for Public Debate] (_Commission Nationale du Débat Public_) in France. We have an https://decidim-monitor.herokuapp.com[online monitoring tool] that captures the relevant public data of known Decidim instances around the world.
 
 *A sustainable ecosystem*. Developed at Barcelona’s http://ajuntament.barcelona.cat/innovaciodemocratica/en[Laboratory for Democratic Innovation], Decidim is the result of the joint effort of a network of collaborating entities and multiple participants leaded by Barcelona’s City Council. Apart from the organizations that use the platform and whose participants and administrators report bugs and suggest improvements, there is a network of 17 different collaborating entities, from software companies to institutional consortia, from research institutions to civil associations. The https://meta.decidim.barcelona/[Metadecidim] community uses an instance of the Decidim platform to organize the different dimensions of the project. As of August 7th 2018 it has 379 registered participants, it hosts minutes of 126 public meetings, details of eight assemblies or working groups, four participatory processes (welcome process, bug reporting, feature proposals, and training workshop process) together with various initiatives and two consultations aimed at defining the roadmap and software design of the platform, bug reporting, community and project governance, research and development. Official documentation and code are developed on https://github.com/decidim[Github] where the project hosts more than 20 repositories with over 50 contributors. They all together generate a sustainable ecosystem that governs, produces and provides services over the platform (deployment, adaptation, configuration, training, consultancy, administration, etc.).
 
